--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,9 @@ before_script:
   - node -v
 
 stages:
-  - appsec
   - build
+  - appsec
+  - lint
 
 build-job:
   cache:
@@ -25,7 +26,7 @@ lint-job:
   cache:
     paths:
       - node_modules/
-  stage: build
+  stage: lint
   script:
     - echo "Running ESlint..."
     - npm install @typescript-eslint/eslint-plugin@5.48.0 --save-dev
