--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@shardus/types": "1.2.6",
     "@types/sqlite3": "3.1.8",
     "cliffy": "2.5.1",
-    "debug": "^4.3.3",
+    "debug": "4.3.4",
     "deepmerge": "4.2.2",
     "dotenv": "16.0.0",
     "ethereum-cryptography": "^2.1.2",
@@ -59,7 +59,7 @@
     "got": "9.6.0",
     "inquirer": "9.1.4",
     "rfdc": "1.3.0",
-    "sequelize": "6.15.1",
+    "sequelize": "6.34.0",
     "sqlite3": "5.1.6",
     "typescript": "4.5.2"
   },
@@ -74,7 +74,7 @@
     "@types/node": "18.16.1",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
-    "axios": "0.21.1",
+    "axios": "1.6.1",
     "cross-env": "5.2.0",
     "eslint": "8.44.0",
     "eslint-config-prettier": "8.6.0",
@@ -94,11 +94,28 @@
     "pm2": "5.3.0",
     "prettier": "2.8.1",
     "shardus": "4.3.0",
-    "shelljs": "0.8.4",
+    "shelljs": "0.8.5",
     "standard": "12.0.1",
     "ts-jest": "26.5.2",
     "typescript": "4.9.4",
-    "typescript-estree": "18.1.0",
+    "@typescript-eslint/typescript-estree": "6.10.0",
     "yarpm": "0.2.1"
+  },
+  "overrides": {
+    "@babel/traverse": "7.23.2",
+    "sequelize": "6.34.0",
+    "qs": "6.11.2",
+    "ejs": "3.1.9",
+    "@hapi/hoek": "8.5.1",
+    "shelljs": "0.8.5",
+    "tough-cookie": "4.1.3",
+    "xml2js": "0.5.0",
+    "log4js": "6.4.0",
+    "passport": "0.6.0",
+    "axios": "1.6.1",
+    "debug": "4.3.4",
+    "jsonwebtoken": "9.0.2",
+    "engine.io": "3.6.1",
+    "nat-api": "timadinorth/nat-api#appsec-dep-fix"
   }
 }
