feat(net): update net to rc0 version

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "update-template": "node scripts/update-template.js",
     "build-docker-dev": "docker build -f dev.Dockerfile -t registry.gitlab.com/shardeum/server:dev .",
     "push-docker-dev": "docker push registry.gitlab.com/shardeum/server:dev",
-    "build-docker-dev2": "docker build -f dev.Dockerfile -t registry.gitlab.com/shardeum/server:dev2 .",
-    "push-docker-dev2": "docker push registry.gitlab.com/shardeum/server:dev2",
+    "build-docker-dev2": "docker build -f dev.Dockerfile -t registry.gitlab.com/shardeum/server:dev3 .",
+    "push-docker-dev2": "docker push registry.gitlab.com/shardeum/server:dev3",
     "build-docker-production": "docker build -f dev.Dockerfile -t registry.gitlab.com/shardeum/server .",
     "push-docker-production": "docker push registry.gitlab.com/shardeum/server",
     "tsc": "tsc"
@@ -46,7 +46,7 @@
     "@shardus/archiver-discovery": "1.1.0",
     "@shardus/core": "2.10.47",
     "@shardus/crypto-utils": "4.1.2",
-    "@shardus/net": "^1.3.6",
+    "@shardus/net": "1.3.7-0",
     "@shardus/types": "1.2.6",
     "@types/sqlite3": "3.1.8",
     "cliffy": "2.5.1",
