--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "ethereumjs-wallet": "1.0.2",
     "fast-stable-stringify": "1.0.0",
     "functional-red-black-tree": "^1.0.1",
-    "got": "9.6.0",
+    "got": "^11.8.6",
     "inquirer": "9.1.4",
     "rfdc": "1.3.0",
     "sequelize": "6.34.0",
@@ -74,6 +74,7 @@
     "@types/node": "18.16.1",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
+    "@typescript-eslint/typescript-estree": "6.10.0",
     "axios": "1.6.1",
     "cross-env": "5.2.0",
     "eslint": "8.44.0",
@@ -98,7 +99,6 @@
     "standard": "12.0.1",
     "ts-jest": "26.5.2",
     "typescript": "4.9.4",
-    "@typescript-eslint/typescript-estree": "6.10.0",
     "yarpm": "0.2.1"
   },
   "overrides": {
