update to use latest shardus core and shardus-net

--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "@ethereumjs/vm": "7.0.0",
     "@mapbox/node-pre-gyp": "1.0.10",
     "@shardus/archiver-discovery": "1.1.0",
-    "@shardus/core": "2.10.47",
+    "@shardus/core": "2.11.0",
     "@shardus/crypto-utils": "4.1.2",
-    "@shardus/net": "1.3.7-0",
+    "@shardus/net": "1.3.8",
     "@shardus/types": "1.2.6",
     "@types/sqlite3": "3.1.8",
     "cliffy": "2.5.1",
