--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
     "inquirer": "9.1.4",
     "rfdc": "1.3.0",
     "sequelize": "6.34.0",
-    "sqlite3": "5.1.6",
-    "typescript": "4.5.2"
+    "sqlite3": "5.1.6"
   },
   "devDependencies": {
     "@shardus/archiver": "3.4.3",
