--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "push-docker-dev2": "docker push registry.gitlab.com/shardeum/server:dev3",
     "build-docker-production": "docker build -f dev.Dockerfile -t registry.gitlab.com/shardeum/server .",
     "push-docker-production": "docker push registry.gitlab.com/shardeum/server",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dcr": "node scripts/debugCycleRecords.ts"
   },
   "author": "",
   "dependencies": {
@@ -88,6 +89,7 @@
     "eslint-plugin-standard": "4.0.1",
     "eslint-plugin-xss": "0.1.12",
     "execa": "4.0.1",
+    "fast-deep-equal": "3.1.3",
     "gts": "3.1.1",
     "hygen-create": "0.2.1",
     "jest": "26.6.3",
