--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "@ethereumjs/vm": "7.0.0",
     "@mapbox/node-pre-gyp": "1.0.10",
     "@shardus/archiver-discovery": "1.1.0",
-    "@shardus/core": "2.12.30-35",
+    "@shardus/core": "2.12.30-36",
     "@shardus/crypto-utils": "4.1.3",
-    "@shardus/net": "1.3.11-4",
+    "@shardus/net": "1.3.11",
     "@shardus/types": "1.2.12",
     "@types/sqlite3": "3.1.8",
     "cliffy": "2.5.1",
