RED-120 add github ci
fixing issue comment Pr review stuff

add codeowners and sync ci.yml, fix quotes on linting command

added format-check and fix

ran format-fix - let me know if this should be reverted

cleanup gitlab.ci

Revert "ran format-fix - let me know if this should be reverted"

This reverts commit 8dd55e4def0b9149e3eb09c419b81c797ce93b55.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "stop": "node scripts/stop.js",
     "clean": "node scripts/clean.js",
     "compile": "tsc -p .",
-    "lint": "eslint './src/**/*.ts'",
-    "lint-windows": "eslint ./src/**/*.ts",
+    "lint": "eslint \"./src/**/*.ts\"",
+    "format-check": "prettier --check './src/**/*.ts'",
+    "format-fix": "prettier --write './src/**/*.ts'",
     "prepare": "npm run compile",
     "restart": "npm run prepare && shardus stop && shardus clean && shardus start",
     "pretest": "npm run compile",
