Adds shardeum test net validator debug script
Makes script executable and adds gifs to readme

Improves error handling and SSH tunnel cleanup in the Shardeum debug setup script.

Fixes for error handling and ssh tunnel cleanup improvements

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ scripts/*.old
 scripts/*.json
 #this last one may slows things down, but not sure
 scripts/*/
+!scripts/shardeumValidatorDebuggingScript
 .idea
 consensorAccounts.json
 archiverAccounts.json
