feat(ajv): added ajv validation for external APIs
feat(ajv): added ajv for inject api

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "pretest": "npm run compile",
     "posttest": "",
     "dbg": "shardus start 3 && shardus stop && rm -rf instances/",
-    "test": "jest --detectOpenHandles --useStderr --coverage",
+    "test": "jest",
     "test:smoke": "cross-env minNodes=20 nodesPerConsensusGroup=5 NODE_ENV='DEBUG' jest --detectOpenHandles --useStderr --coverage main.test.ts",
     "test:shardedNet": "cross-env minNodes=20 nodesPerConsensusGroup=5 NODE_ENV='DEBUG' jest --detectOpenHandles --useStderr --coverage shardedNetwork.test.ts",
     "test:singleShardRotation": "cross-env minNodes=10 nodesPerConsensusGroup=20 NODE_ENV='DEBUG' NodeReward=false jest --detectOpenHandles --useStderr --coverage singleShardRotation.test.ts",
