--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shardeum",
-  "version": "1.12.1",
+  "version": "1.13.0",
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
@@ -46,10 +46,10 @@
     "@ethereumjs/vm": "7.0.0",
     "@mapbox/node-pre-gyp": "1.0.10",
     "@shardus/archiver-discovery": "1.1.0",
-    "@shardus/core": "2.12.30-71",
+    "@shardus/core": "2.13.0",
     "@shardus/crypto-utils": "4.1.3",
-    "@shardus/net": "1.3.15",
-    "@shardus/types": "1.2.15",
+    "@shardus/net": "1.4.0",
+    "@shardus/types": "1.2.16",
     "@types/sqlite3": "3.1.8",
     "cliffy": "2.5.1",
     "cls-hooked": "^4.2.2",
