--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@ethereumjs/vm": "7.0.0",
     "@mapbox/node-pre-gyp": "1.0.10",
     "@shardus/archiver-discovery": "1.1.0",
-    "@shardus/core": "2.13.0",
+    "@shardus/core": "2.13.1-0",
     "@shardus/crypto-utils": "4.1.3",
     "@shardus/net": "1.4.0",
     "@shardus/types": "1.2.16",
