--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@ethereumjs/vm": "7.0.0",
     "@mapbox/node-pre-gyp": "1.0.10",
     "@shardus/archiver-discovery": "1.1.0",
-    "@shardus/core": "2.13.1",
+    "@shardus/core": "2.13.2-0",
     "@shardus/crypto-utils": "4.1.3",
     "@shardus/net": "1.4.0",
     "@shardus/types": "1.2.16",
@@ -66,7 +66,7 @@
     "sqlite3": "5.1.6"
   },
   "devDependencies": {
-    "@shardus/archiver": "3.4.23",
+    "@shardus/archiver": "3.4.24",
     "@shardus/monitor-server": "2.8.4",
     "@types/decimal.js": "7.4.0",
     "@types/express": "4.17.2",
