--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shardeum",
-  "version": "1.13.0",
+  "version": "1.14.0",
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
@@ -66,7 +66,7 @@
     "sqlite3": "5.1.6"
   },
   "devDependencies": {
-    "@shardus/archiver": "3.5.4-1",
+    "@shardus/archiver": "3.5.4",
     "@shardus/monitor-server": "2.8.5",
     "@types/decimal.js": "7.4.0",
     "@types/express": "4.17.2",
