--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "@ethereumjs/vm": "7.0.0",
     "@mapbox/node-pre-gyp": "1.0.10",
     "@shardus/archiver-discovery": "1.1.0",
-    "@shardus/core": "shardeum/shardus-core#dev",
-    "@shardus/crypto-utils": "4.1.4",
-    "@shardus/net": "1.4.0",
-    "@shardus/types": "1.2.21",
+    "@shardus/core": "git+https://github.com/shardeum/shardus-core#dev",
+    "@shardus/crypto-utils": "git+https://github.com/shardeum/lib-crypto-utils#v4.1.4",
+    "@shardus/net": "git+https://github.com/shardeum/lib-net#v1.4.0",
+    "@shardus/types": "git+https://github.com/shardeum/lib-types#v1.2.21",
     "@types/sqlite3": "3.1.8",
     "cliffy": "2.5.1",
     "cls-hooked": "^4.2.2",
@@ -66,8 +66,8 @@
     "sqlite3": "5.1.6"
   },
   "devDependencies": {
-    "@shardus/archiver": "3.5.7-0",
-    "@shardus/monitor-server": "2.8.5",
+    "@shardus/archiver": "git+https://github.com/shardeum/archive-server/#v3.5.7-0",
+    "@shardus/monitor-server": "git+https://github.com/shardeum/x-monitor-server#v2.8.5",
     "@types/decimal.js": "7.4.0",
     "@types/express": "4.17.2",
     "@types/heapdump": "0.3.1",
