--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "@ethereumjs/util": "9.0.0",
     "@ethereumjs/vm": "7.0.0",
     "@mapbox/node-pre-gyp": "1.0.10",
-    "@shardus/archiver-discovery": "git+https://github.com/shardeum/lib-archiver-discovery#dev",
-    "@shardus/core": "git+https://github.com/shardeum/shardus-core#dev",
-    "@shardus/crypto-utils": "git+https://github.com/shardeum/lib-crypto-utils#dev",
-    "@shardus/net": "git+https://github.com/shardeum/lib-net#dev",
-    "@shardus/types": "git+https://github.com/shardeum/lib-types#dev",
+    "@shardus/archiver-discovery": "git+https://github.com/shardeum/lib-archiver-discovery#itn4",
+    "@shardus/core": "git+https://github.com/shardeum/shardus-core#itn4",
+    "@shardus/crypto-utils": "git+https://github.com/shardeum/lib-crypto-utils#itn4",
+    "@shardus/net": "git+https://github.com/shardeum/lib-net#itn4",
+    "@shardus/types": "git+https://github.com/shardeum/lib-types#itn4",
     "@types/sqlite3": "3.1.8",
     "cliffy": "2.5.1",
     "cls-hooked": "4.2.2",
@@ -66,8 +66,8 @@
     "sqlite3": "5.1.6"
   },
   "devDependencies": {
-    "@shardus/archiver": "git+https://github.com/shardeum/archive-server/#dev",
-    "@shardus/monitor-server": "git+https://github.com/shardeum/x-monitor-server#dev",
+    "@shardus/archiver": "git+https://github.com/shardeum/archive-server#dev",
+    "@shardus/monitor-server": "git+https://github.com/shardeum/x-monitor-server#itn4",
     "@types/decimal.js": "7.4.0",
     "@types/express": "4.17.2",
     "@types/heapdump": "0.3.1",
