--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "sqlite3": "5.1.6"
   },
   "devDependencies": {
-    "@shardus/archiver": "git+https://github.com/shardeum/archive-server#dev",
+    "@shardus/archiver": "git+https://github.com/shardeum/archive-server#itn4",
     "@shardus/monitor-server": "git+https://github.com/shardeum/x-monitor-server#itn4",
     "@types/decimal.js": "7.4.0",
     "@types/express": "4.17.2",
