Add release commands

--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "build-docker-production": "docker build -f dev.Dockerfile -t registry.gitlab.com/shardeum/server .",
     "push-docker-production": "docker push registry.gitlab.com/shardeum/server",
     "tsc": "tsc",
-    "dcr": "node scripts/debugCycleRecords.ts"
+    "dcr": "node scripts/debugCycleRecords.ts",
+    "release:patch": "npm run prepare && npm version patch && git push --follow-tags && npm publish",
+    "release:minor": "npm run prepare && npm version minor && git push --follow-tags && npm publish",
+    "release:major": "npm run prepare && npm version major && git push --follow-tags && npm publish"
   },
   "author": "",
   "dependencies": {
