add flexibleRotationDelta as env var and to config files

--- a/debug-10-nodes.config.json
+++ b/debug-10-nodes.config.json
@@ -8,6 +8,7 @@
       "syncFloorEnabled": true,
       "syncingDesiredMinCount": 5,
       "activeRecoveryEnabled": true,
+      "flexibleRotationDelta": 0,
       "formingNodesPerCycle": 9
     },
     "sharding": {
