--- a/debug-25-nodes.config.json
+++ b/debug-25-nodes.config.json
@@ -8,6 +8,7 @@
       "syncFloorEnabled": true,
       "syncingDesiredMinCount": 5,
       "activeRecoveryEnabled": true,
+      "flexibleRotationDelta": 0,
       "formingNodesPerCycle": 24
     },
     "sharding": {
