Update packages & fix errors.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shardeum",
+  "name": "@shardeum-foundation/shardeum",
   "version": "1.17.0",
   "description": "",
   "main": "dist/src/index.js",
@@ -38,6 +38,11 @@
   },
   "author": "",
   "dependencies": {
+    "@shardeum-foundation/lib-archiver-discovery": "1.1.0",
+    "@shardeum-foundation/core": "2.13.4-prerelease.0",
+    "@shardeum-foundation/lib-crypto-utils": "4.1.5",
+    "@shardeum-foundation/lib-net": "1.4.0",
+    "@shardeum-foundation/lib-types": "1.2.21",
     "@ethereumjs/block": "5.0.0",
     "@ethereumjs/blockchain": "7.0.0",
     "@ethereumjs/common": "4.0.0",
@@ -49,11 +54,6 @@
     "@ethereumjs/util": "9.0.0",
     "@ethereumjs/vm": "7.0.0",
     "@mapbox/node-pre-gyp": "1.0.10",
-    "@shardus/archiver-discovery": "git+https://github.com/shardeum/lib-archiver-discovery#dev",
-    "@shardus/core": "git+https://github.com/shardeum/shardus-core#dev",
-    "@shardus/crypto-utils": "git+https://github.com/shardeum/lib-crypto-utils#dev",
-    "@shardus/net": "git+https://github.com/shardeum/lib-net#dev",
-    "@shardus/types": "git+https://github.com/shardeum/lib-types#dev",
     "@types/sqlite3": "3.1.8",
     "cliffy": "2.5.1",
     "cls-hooked": "4.2.2",
@@ -70,8 +70,9 @@
     "sqlite3": "5.1.6"
   },
   "devDependencies": {
-    "@shardus/archiver": "git+https://github.com/shardeum/archive-server#dev",
-    "@shardus/monitor-server": "git+https://github.com/shardeum/x-monitor-server#dev",
+    "@shardeum-foundation/archiver": "3.5.7-prerelease.1",
+    "@shardeum-foundation/monitor-server": "2.8.6-prerelease.0",
+    "@shardeum-foundation/tools-shardus-cli": "4.3.0",
     "@types/decimal.js": "7.4.0",
     "@types/express": "4.17.21",
     "@types/heapdump": "0.3.1",
@@ -101,7 +102,6 @@
     "jest": "29.7.0",
     "pm2": "5.3.0",
     "prettier": "2.8.1",
-    "shardus": "git+https://github.com/shardeum/tools-cli-shardus#dev",
     "shelljs": "0.8.5",
     "standard": "12.0.1",
     "ts-jest": "29.2.5",
