--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   "devDependencies": {
     "@shardeum-foundation/archiver": "3.5.7-prerelease.3",
     "@shardeum-foundation/monitor-server": "2.8.6-prerelease.1",
-    "@shardeum-foundation/tools-shardus-cli": "4.3.1-prerelease.4",
+    "@shardeum-foundation/tools-shardus-cli": "4.3.1",
     "@types/decimal.js": "7.4.0",
     "@types/express": "4.17.21",
     "@types/heapdump": "0.3.1",
