--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
   },
   "author": "",
   "dependencies": {
-    "@shardeum-foundation/lib-archiver-discovery": "1.1.1-prerelease.0",
-    "@shardeum-foundation/core": "2.13.4-prerelease.2",
-    "@shardeum-foundation/lib-crypto-utils": "4.1.6-prerelease.0",
-    "@shardeum-foundation/lib-net": "1.4.1-prerelease.0",
-    "@shardeum-foundation/lib-types": "1.2.22-prerelease.1",
+    "@shardeum-foundation/lib-archiver-discovery": "1.1.1",
+    "@shardeum-foundation/core": "2.13.4",
+    "@shardeum-foundation/lib-crypto-utils": "4.1.7",
+    "@shardeum-foundation/lib-net": "1.4.2",
+    "@shardeum-foundation/lib-types": "1.2.23",
     "@ethereumjs/block": "5.0.0",
     "@ethereumjs/blockchain": "7.0.0",
     "@ethereumjs/common": "4.0.0",
@@ -70,8 +70,8 @@
     "sqlite3": "5.1.6"
   },
   "devDependencies": {
-    "@shardeum-foundation/archiver": "3.5.7-prerelease.3",
-    "@shardeum-foundation/monitor-server": "2.8.6-prerelease.1",
+    "@shardeum-foundation/archiver": "3.5.7",
+    "@shardeum-foundation/monitor-server": "2.8.6",
     "@shardeum-foundation/tools-shardus-cli": "4.3.1",
     "@types/decimal.js": "7.4.0",
     "@types/express": "4.17.21",
