--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "author": "",
   "dependencies": {
     "@shardeum-foundation/lib-archiver-discovery": "1.1.1",
-    "@shardeum-foundation/core": "2.13.6",
+    "@shardeum-foundation/core": "2.13.7-prerelease.1",
     "@shardeum-foundation/lib-crypto-utils": "4.1.7",
     "@shardeum-foundation/lib-net": "1.4.2",
     "@shardeum-foundation/lib-types": "1.2.23",
@@ -70,8 +70,8 @@
     "sqlite3": "5.1.6"
   },
   "devDependencies": {
-    "@shardeum-foundation/archiver": "3.5.8",
-    "@shardeum-foundation/monitor-server": "2.8.6",
+    "@shardeum-foundation/archiver": "3.5.9-prerelease.0",
+    "@shardeum-foundation/monitor-server": "2.8.7",
     "@shardeum-foundation/tools-shardus-cli": "4.3.2",
     "@types/decimal.js": "7.4.0",
     "@types/express": "4.17.21",
