--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "push-docker-production": "docker push registry.gitlab.com/shardeum/server",
     "tsc": "tsc",
     "dcr": "node scripts/debugCycleRecords.ts",
-    "release:prerelease": "npm run prepare && npm version prerelease --preid=prerelease && git push --follow-tags && npm publish --tag prerelease",
-    "release:patch": "npm run prepare && npm version patch && git push --follow-tags && npm publish",
-    "release:minor": "npm run prepare && npm version minor && git push --follow-tags && npm publish",
-    "release:major": "npm run prepare && npm version major && git push --follow-tags && npm publish"
+    "release:prepatch": "npm run prepare && npm version prepatch --preid=prerelease && git push --follow-tags",
+    "release:preminor": "npm run prepare && npm version preminor --preid=prerelease && git push --follow-tags",
+    "release:premajor": "npm run prepare && npm version premajor --preid=prerelease && git push --follow-tags",
+    "release:prerelease": "npm run prepare && npm version prerelease --preid=prerelease && git push --follow-tags",
+    "release:patch": "npm run prepare && npm version patch && git push --follow-tags",
+    "release:minor": "npm run prepare && npm version minor && git push --follow-tags",
+    "release:major": "npm run prepare && npm version major && git push --follow-tags"
   },
   "author": "",
   "dependencies": {
