--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shardeum-foundation/shardeum",
-  "version": "1.17.1",
+  "version": "1.18.0-prerelease.0",
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
