fix: add testnet empty config (#381)
* fix: add testnet empty config

Needs to be filled in when the details are known.

* Update all 5 env configs with overrides per that config.

---------

Co-authored-by: Marc Hanson <marc.hanson.github@gmail.com>
Co-authored-by: Marc Hanson <marc@shardeum.org>

--- a/environments/stagenet.config.json
+++ b/environments/stagenet.config.json
@@ -1,1 +1,11 @@
-{}
+{
+  "server": {
+    "p2p": {
+      "baselineNodes": 300,
+      "minNodes": 300,
+      "syncingDesiredMinCount": 20,
+      "flexibleRotationDelta": 5,
+      "formingNodesPerCycle": 300
+    }
+  }
+}
