--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shardeum-foundation/shardeum",
-  "version": "1.18.0-prerelease.5",
+  "version": "1.18.0-prerelease.6",
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
@@ -37,9 +37,7 @@
     "release:prerelease": "npm run prepare && npm version prerelease --preid=prerelease && git push --follow-tags",
     "release:patch": "npm run prepare && npm version patch && git push --follow-tags",
     "release:minor": "npm run prepare && npm version minor && git push --follow-tags",
-    "release:major": "npm run prepare && npm version major && git push --follow-tags",
-    "format-check": "prettier --check './src/**/*.ts'",
-    "format-fix": "prettier --write './src/**/*.ts'"
+    "release:major": "npm run prepare && npm version major && git push --follow-tags"
   },
   "author": "",
   "dependencies": {
