SHARD-2172 - Super awesome data pipeline and data. (#431)
* generate environment based key configs

* use google sheets api instead of excel

* Fix bug in shm-to-wei method.

* Fix bugs in generation.

* Lots of fixes.

* Update script to auto insert ms key 0 balance.

* Add test inject keys

* Remove some test files.  Add command line args.  Generate output in-place.

* Script output data.

---------

Co-authored-by: Sam Sweet <samwsweet@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,14 @@ scripts/*.json
 #this last one may slows things down, but not sure
 scripts/*/
 !scripts/shardeumValidatorDebuggingScript
+!scripts/environmentGeneration/
+scripts/environmentGeneration/devkeys*
+scripts/environmentGeneration/genesis/
+scripts/environmentGeneration/multisigKeys*
+scripts/environmentGeneration/multisig-permissions*
+scripts/environmentGeneration/secure-accounts*
+scripts/environmentGeneration/test-output*
+scripts/environmentGeneration/node-mules*
 .idea
 consensorAccounts.json
 archiverAccounts.json
