--- a/environments/testnet.config.json
+++ b/environments/testnet.config.json
@@ -78,7 +78,8 @@
         "0x4FE8CaabA0BaC60AE9452DB06a983932C58cC811": 3,
         "0x979B63E576E91eb20B5D89E9aA94FD793E6b19AD": 3,
         "0x58845fbe90f9558a205A0d99F5a9D45a3ee6789b": 3
-      }
+      },
+      "enableDebugFlags": false
     }
   }
 }
