Updating configs urgent update.

--- a/environments/devnet.config.json
+++ b/environments/devnet.config.json
@@ -3,6 +3,7 @@
     "p2p": {
       "baselineNodes": 25,
       "minNodes": 25,
+      "maxNodes": 1280,
       "syncingDesiredMinCount": 5,
       "flexibleRotationDelta": 0,
       "formingNodesPerCycle": 25
