--- a/environments/stagenet.config.json
+++ b/environments/stagenet.config.json
@@ -1,11 +1,15 @@
 {
   "server": {
     "p2p": {
-      "baselineNodes": 300,
-      "minNodes": 300,
+      "baselineNodes": 256,
+      "minNodes": 256,
+      "maxNodes": 1280,
       "syncingDesiredMinCount": 20,
       "flexibleRotationDelta": 5,
       "formingNodesPerCycle": 300
+    },
+    "sharding": {
+      "nodesPerConsensusGroup": 128
     },
     "debug": {
       "devPublicKeys": {
