init commit for network config compare tool (#452)

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ scripts/*.json
 scripts/*/
 !scripts/shardeumValidatorDebuggingScript
 !scripts/environmentGeneration/
+!scripts/network-account-compare/
 scripts/environmentGeneration/devkeys*
 scripts/environmentGeneration/genesis/
 scripts/environmentGeneration/multisigKeys*
