SHARD-2231 - Disable txn (#453)
* SHARD-2231 - Disable txn

* And stagenet

--- a/environments/devnet.config.json
+++ b/environments/devnet.config.json
@@ -6,7 +6,8 @@
       "maxNodes": 1280,
       "syncingDesiredMinCount": 5,
       "flexibleRotationDelta": 0,
-      "formingNodesPerCycle": 25
+      "formingNodesPerCycle": 25,
+      "allowEndUserTxnInjections": true
     },
     "sharding": {
       "nodesPerConsensusGroup": 10
