--- a/environments/local.config.json
+++ b/environments/local.config.json
@@ -7,7 +7,8 @@
       "forceBogonFilteringOn": false,
       "syncingDesiredMinCount": 5,
       "flexibleRotationDelta": 0,
-      "formingNodesPerCycle": 10
+      "formingNodesPerCycle": 10,
+      "allowEndUserTxnInjections": true
     },
     "sharding": {
       "nodesPerConsensusGroup": 10
