--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shardeum-foundation/shardeum",
-  "version": "1.19.0-prerelease.6",
+  "version": "1.19.0",
   "description": "",
   "main": "dist/src/index.js",
   "license": "MIT",
